# debian-libpam-mount

./: .gitignore-rename  COPYING  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  dvconfigure  libcryptmount.pc.in
config/: Makefile.am  Makefile.in  pam_mount.conf.xml  pam_mount.conf.xml.dtd  pam_mount.fc  pam_mount_macros.te
debian/: NEWS  README.Debian  changelog  common-pammount  control  copyright  libpam-mount.dirs  libpam-mount.docs  libpam-mount.lintian-overrides  libpam-mount.manpages  libpam-mount.postinst  libpam-mount.postrm  libpam-mount.prerm  pam-auth-update  pmt-ofl.1  rules  source.lintian-overrides  watch
debian/patches/: 001-add-fd0ssh  002-add-ofl  003-hurd-path-max-define  004-allow-usernames-beginning-with-numbers  005-debian-manpages  006-pmvarrun-allow-eacces  007-fix-mount-crypt-fork-bomb  008-disallow-luserconf-path  009-manpage-typos  010-mount-crypt-libs  011-pmvarrun-no-l0g  allow_cryptsetup_disable  allow_usernames_beginning_with_numbers  debian_manpages  kfreebsd_compile_fixes  mnt_fallback  remove-unsupported--p0-mount-option.patch  series
doc/: .gitignore-rename  Makefile.am  Makefile.in  bugs.txt  changelog.txt  faq.txt  install.txt  mount.crypt.8  mount.crypt_LUKS.8  news.txt  options.txt  pam_mount.8.in  pam_mount.conf.5.in  pam_mount.txt  pmt-ehd.8  pmt-fd0ssh.1  pmvarrun.8  ported.txt  todo.txt  umount.crypt.8  umount.crypt_LUKS.8
src/: .gitignore-rename  Makefile.am  Makefile.in  autoloop.c  bdev.c  cmt-internal.h  crypto-cgd.c  crypto-dmc.c  crypto.c  ehd.c  fd0ssh.c  ismnt.c  libcryptmount.h  libcryptmount.map  log.c  loop-linux.c  loop-mdvn.c  loop-vnd.c  loop.c  misc.c  mount-bsd.c  mount-sysv.c  mount.c  mtab.c  mtcrypt.c  mtencfs13.c  ofl-lib.c  pam_mount.c  pam_mount.h  pmvarrun.c  rdconf1.c  rdconf2.c  spawn.c  t-crypt
